tests/baselines/reference/decoratorOnClassProperty7.errors.txt
tests/cases/conformance/decorators/class/property/decoratorOnClassProperty7.ts(4,5): error TS1220: Invalid expression for property decorator.
  Supplied parameters do not match any signature of call target.


==== tests/cases/conformance/decorators/class/property/decoratorOnClassProperty7.ts (1 errors) ====
    declare function dec(target: Function, propertyKey: string | symbol, paramIndex: number): void;
    
    class C {
        @dec prop;
        ~~~~
!!! error TS1220: Invalid expression for property decorator.
!!! error TS1220:   Supplied parameters do not match any signature of call target.
    }